navbar bit better

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,9 @@ body::-webkit-scrollbar {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 100;
 }
+.dropdown-content #off{
+  background-color: #3333333b;
+}
 
 /* Links inside the dropdown */
 .dropdown-content a {
@@ -151,9 +154,7 @@ body::-webkit-scrollbar {
 }
 
 /* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
+
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -161,7 +162,7 @@ body::-webkit-scrollbar {
 }
 
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 1050px){
   .menu{
     display: none;
   }
@@ -197,6 +198,10 @@ body::-webkit-scrollbar {
     position: fixed;
     
   }
+}
+.dropdown-content #off{
+  background-color: #3333333b;
+  color: black;
 }
 
 
