--- a/css/blog.css
+++ b/css/blog.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Poppins", sans-serif;
   display: grid;
   place-items: center;
 }
