--- a/css/blog.css
+++ b/css/blog.css
@@ -20,10 +20,11 @@ body {
   justify-content: center;
   margin-block: 2rem;
   gap: 2rem;
-  margin-top: 60px;
+  padding-top: 100px;
   padding-bottom: 60px;
   background: linear-gradient(#121212, #C04DFF);
   width: 100vw;
+  height: 100%;
 }
 
 img {
@@ -40,7 +41,7 @@ a{
   display: flex;
   flex-direction: column;
   width: clamp(20rem, calc(20rem + 2vw), 22rem);
-  height: 65vh;
+  height: 75vh;
   overflow: hidden;
   box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
   border-radius: 1em;
@@ -54,7 +55,7 @@ a{
 .card:hover {
   transform: translateY(-.5rem);
   box-shadow: 0 .5rem 2rem rgba(0, 0, 0, 0.1);
-  height: 70vh;
+  height: 80vh;
 }
 
 
