--- a/css/team.css
+++ b/css/team.css
@@ -1,6 +1,6 @@
 body {
     width: 100vw;
-    background-color: #131515;
+    background-image: url("../image/aboutBG.jpg");
     margin: 0;
     font-family: helvetica;
     text-decoration: none;
