--- a/css/homeelements.css
+++ b/css/homeelements.css
@@ -34,7 +34,7 @@
   top: 0;                                             /* Position the content section at the top */
   left: 0;                                            /* Position the content section at the left */
   width: 100vw;                                        /* Set the width of the content section to 100% */
-  background-color: rgba(0, 0, 0);             /* Set the background color of the content section with opacity */
+  background-color: rgba(0, 0, 0, 0.7);             /* Set the background color of the content section with opacity */
   z-index: 3;                                         /* Set the z-index of the content section to 3 */
   color: white;                                     /* Set the text color of the content section to white */
   margin-top: 20vh;                                  /* Add top margin to the content section */
