--- a/css/partners.css
+++ b/css/partners.css
@@ -83,9 +83,9 @@
         font-size: 3.5vw;
     }
     #Part1, #Part2, #Part3,#Part4{
-        width: 85vw;
-        height: 20vh;
-        margin: 2px auto;
+        width: 90%;
+        /* height: 20rem; */
+        margin: 5px auto;
     }
     #Partners{
         grid-template-columns: 1fr;
