--- a/css/blog.css
+++ b/css/blog.css
@@ -14,6 +14,21 @@ body {
   place-items: center;
 }
 
+.demo-bg {
+  opacity: 0.4;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  min-height: 100%;
+  z-index: 0; 
+}
+
+#contents{
+  z-index: 10;
+}
+
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -22,7 +37,6 @@ body {
   gap: 2rem;
   padding-top: 100px;
   padding-bottom: 60px;
-  background: linear-gradient(#121212, #C04DFF);
   width: 100vw;
   height: 100%;
 }
