--- a/css/summer.css
+++ b/css/summer.css
@@ -5,7 +5,6 @@
 #summer-content{
     margin-top: 60px;
     padding: 20px;
-    transition: opacity 0.5s ease-in-out;
     text-align: center;
 }
 
@@ -121,7 +120,7 @@
     object-fit: cover;
     border-radius: 10px;
     transition: 0.5s;
-    opacity: 0.8;
+    opacity: 1;
     position: static;
 }
 
@@ -187,7 +186,7 @@ figure.snip1192 blockquote:after {
   content: "\201C";
   position: absolute;
   font-size: 50px;
-  opacity: 0.3;
+  opacity: 1;
   font-style: normal;
 }
 figure.snip1192 blockquote:before {
@@ -206,7 +205,7 @@ figure.snip1192 .author {
   color: #ffffff;
 }
 figure.snip1192 .author h5 {
-  opacity: 0.8;
+  opacity: 1;
   margin: 0;
   font-weight: 800;
 }
@@ -238,6 +237,7 @@ figure.snip1192 .author h5 span {
     width: 100%;
     margin-left: 0px;
   }
+
   #testimonials{
     flex-direction: column;
     align-items: center;
@@ -246,13 +246,24 @@ figure.snip1192 .author h5 span {
     min-width: 80vw;
     height: 40vh;
   }
+
   #content-description{
     width: 80vw;
-    padding: 20px;
+    padding: 10px;
     font-size: 15px;
     color: white;
     text-align: center;
   }
 
+  #content-img{
+    margin-top: 60px;
+    min-width: 80vw;
+    min-height: 80vw;
+  }
+
+  #testimonials-heading{
+    margin-top: 40vh;
+    text-align: center;
+  }
 }
 
