--- a/css/styles.css
+++ b/css/styles.css
@@ -344,3 +344,15 @@ body::-webkit-scrollbar {
   height: 10vh;
   padding-top: 0;
 }
+#scrollButton {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px 10px;
+  background-color: transparent;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  z-index: 1000; /* Ensure the button is on top */
+}
